--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,17 +11,13 @@ $gray: #f1f5f9;
     font-family: $roboto;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .content {
     height: 100vh;
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-}
-
-.main {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    flex-grow: 1;
+    grid-template-rows: 6rem 1fr;
+    grid-template-columns: 20rem 1fr;
 }
