--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,8 @@
 header {
     background: $pink;
     color: $textColor;
-    grid-area: header;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
     padding: 1rem;
 }
 
