--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,25 +2,22 @@
   font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .content {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-}
-
-.main {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  flex-grow: 1;
+  grid-template-rows: 6rem 1fr;
+  grid-template-columns: 20rem 1fr;
 }
 
 header {
   background: #FF1493;
   color: white;
-  grid-area: header;
+  grid-column: 1/3;
+  grid-row: 1/2;
   padding: 1rem;
 }
 
@@ -40,94 +37,106 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  grid-row: 2/3;
+  grid-column: 1/2;
 }
 
-.project-list {
+.project-list, .recurring-list {
   display: flex;
   flex-direction: column;
-  overflow: auto;
   gap: 12px;
 }
-.project-list .project {
+.project-list .project, .recurring-list .project {
   cursor: pointer;
   font-size: 24px;
 }
-.project-list h1 {
+.project-list h2, .recurring-list h2 {
   border-bottom: 3px solid white;
   font-size: 32px;
 }
-.project-list button {
+.project-list button, .recurring-list button {
   background-color: #2dd4bf;
   border: none;
   color: white;
   padding: 4px 0;
   font-size: 16px;
 }
-.project-list button:hover {
+.project-list button:hover, .recurring-list button:hover {
   background-color: white;
   color: #2dd4bf;
 }
 
-.container {
-  padding: 1rem 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.container .add-btn {
-  border: none;
-  background-color: #2dd4bf;
-  color: white;
-  font-size: 16px;
-  padding: 4px;
-  border-radius: 8px;
-  width: 15%;
-  border: 2px solid #2dd4bf;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  gap: 4px;
-}
-.container .add-btn:hover {
-  background: white;
-  color: #2dd4bf;
-}
-.container .add-btn .plus {
-  font-size: 24px;
-}
-.container h1 {
-  border-bottom: 3px solid black;
-  margin-bottom: 12px;
-}
-.container ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+.project-list {
   overflow: auto;
 }
-.container li {
+
+main {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  padding: 0 1rem;
+  border-top: 1rem solid white;
+  border-bottom: 1rem solid white;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  overflow-y: auto;
+}
+main::-webkit-scrollbar {
+  width: 10px;
+}
+main::-webkit-scrollbar-thumb {
+  background: lightgray;
+  border-radius: 5px;
+}
+
+.divider {
+  width: 100%;
+  height: 5px;
+  background-color: black;
+  border-radius: 2px;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  min-height: 0px;
+}
+
+.todo {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem;
   background-color: #f1f5f9;
 }
-.container li .actions {
+
+.task {
   display: flex;
-  gap: 8px;
-}
-.container li .actions span[class^=material] {
-  cursor: pointer;
+  gap: 4px;
+  align-items: center;
 }
 
-.edit:hover {
-  color: #02b6ff;
+.task__title {
+  font-size: 16px;
 }
 
-.delete:hover {
-  color: #dc2626;
+.task__checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid black;
+  box-sizing: border-box;
+}
+
+.completed .task__checkbox {
+  background-image: url(../assets/check-mark.png);
+  background-position: 50% 50%;
+  background-size: 22px;
+  background-repeat: no-repeat;
+}
+.completed .task__title {
+  text-decoration: line-through;
 }
 
 .priority-low {
@@ -142,29 +151,41 @@ nav {
   border-left: 6px solid #dc2626;
 }
 
-.checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 2px solid black;
-  box-sizing: border-box;
-}
-
-.completed .checkbox {
-  background-image: url(../assets/check-mark.png);
-  background-position: 50% 50%;
-  background-size: 22px;
-  background-repeat: no-repeat;
-}
-.completed p {
-  text-decoration: line-through;
-}
-
-.task {
+.actions {
   display: flex;
-  gap: 4px;
+  gap: 8px;
   align-items: center;
 }
-.task p {
+.actions span[class^=material] {
+  cursor: pointer;
+}
+
+.edit:hover {
+  color: #02b6ff;
+}
+
+.delete:hover {
+  color: #dc2626;
+}
+
+.add-btn {
+  border: none;
+  background-color: #2dd4bf;
+  color: white;
   font-size: 16px;
+  padding: 4px;
+  width: 100%;
+  border: 2px solid #2dd4bf;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  gap: 4px;
+}
+.add-btn:hover {
+  background: white;
+  color: #2dd4bf;
+}
+.add-btn .plus {
+  font-size: 24px;
 }/*# sourceMappingURL=style.css.map */
