finish styling forms

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,6 @@
 header {
-    background: $pink;
+    // background: $pink;
+    background: $blue;
     color: $textColor;
     grid-column: 1 / 3;
     grid-row: 1 / 2;
