--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -12,8 +12,17 @@ main {
         width: 10px;
     }
     &::-webkit-scrollbar-thumb {
-        background: lightgray;
+        background: #f7f7f7;
         border-radius: 5px;
+    }
+}
+
+.project-title {
+    h2 {
+        font-size: 32px;
+    }
+    p {
+        font-size: 24px;
     }
 }
 
