--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,11 +10,12 @@
   width: 100vw;
   display: grid;
   grid-template-rows: 6rem 1fr;
-  grid-template-columns: 20rem 1fr;
+  grid-template-columns: 25rem 1fr;
+  overflow-x: hidden;
 }
 
 header {
-  background: #FF1493;
+  background: #02b6ff;
   color: white;
   grid-column: 1/3;
   grid-row: 1/2;
@@ -31,43 +32,67 @@ header {
 }
 
 nav {
-  background: #02b6ff;
-  color: white;
-  padding: 1rem 1rem 0;
+  background: #f7f7f7;
   display: flex;
   flex-direction: column;
-  gap: 24px;
   grid-row: 2/3;
   grid-column: 1/2;
+  justify-content: space-between;
+  padding: 2rem;
 }
 
-.project-list, .recurring-list {
+.nav {
+  font-size: 2rem;
+  list-style: none;
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-.project-list .project, .recurring-list .project {
+.nav li:not(:last-child) {
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  font-size: 24px;
+  gap: 6px;
 }
-.project-list h2, .recurring-list h2 {
-  border-bottom: 3px solid white;
-  font-size: 32px;
+
+.projects-title {
+  display: flex;
+  align-items: center;
+  gap: 6px;
 }
-.project-list button, .recurring-list button {
+
+.projects {
+  margin-top: 1rem;
+  margin-left: 2rem;
+  max-height: 15rem;
+  overflow-y: auto;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.projects::-webkit-scrollbar {
+  width: 5px;
+}
+.projects::-webkit-scrollbar-thumb {
+  background-color: #02b6ff;
+  border-radius: 5px;
+}
+
+#add-project-btn {
   background-color: #2dd4bf;
   border: none;
   color: white;
   padding: 4px 0;
   font-size: 16px;
 }
-.project-list button:hover, .recurring-list button:hover {
+#add-project-btn:hover {
   background-color: white;
   color: #2dd4bf;
 }
 
-.project-list {
-  overflow: auto;
+.active {
+  color: #2dd4bf;
 }
 
 main {
@@ -85,8 +110,15 @@ main::-webkit-scrollbar {
   width: 10px;
 }
 main::-webkit-scrollbar-thumb {
-  background: lightgray;
+  background: #f7f7f7;
   border-radius: 5px;
+}
+
+.project-title h2 {
+  font-size: 32px;
+}
+.project-title p {
+  font-size: 24px;
 }
 
 .divider {
@@ -188,4 +220,76 @@ main::-webkit-scrollbar-thumb {
 }
 .add-btn .plus {
   font-size: 24px;
+}
+
+.modal-bg {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+}
+.modal-bg form {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.modal {
+  position: relative;
+  background-color: white;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__header {
+  display: flex;
+  background-color: #02b6ff;
+  color: white;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  font-size: 24px;
+}
+
+.modal__close {
+  cursor: pointer;
+}
+.modal__close:hover {
+  color: gray;
+}
+
+.form-row {
+  display: flex;
+  gap: 12px;
+}
+
+.form-column {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.form-element {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }/*# sourceMappingURL=style.css.map */
