--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -65,6 +65,7 @@ main {
     border-radius: 50%;
     border: 2px solid black;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 .completed {
