--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -14,6 +14,9 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    li {
+        // cursor: pointer;
+    }
     li:not(:last-child) {
         display: flex;
         align-items: center;
@@ -43,6 +46,9 @@ nav {
     &::-webkit-scrollbar-thumb {
         background-color: $blue;
         border-radius: 5px;
+    }
+    li {
+        cursor: pointer;
     }
 }
 
